[package]
name = "spdcp"
version = "0.3.0"
description = "A library for parsing docparse comment range"
authors = ["rumblefrog <contact@rumblefrog.me>"]
repository = "https://github.com/rumblefrog/sp-dcp"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
