[package]
name = "spdcp"
version = "0.4.0"
description = "A library for parsing docparse comment range"
authors = ["rumblefrog <contact@rumblefrog.me>"]
repository = "https://github.com/rumblefrog/sp-dcp"
license = "MIT"
edition = "2018"

[features]
default = []

wasm = ["serde", "wasm-bindgen"]

[dependencies]

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dependencies.wasm-bindgen]
version = "^0.2"
optional = true
features = ["serde-serialize"]