[package]
name = "spdcp"
version = "0.4.2"
description = "A library for parsing docparse comment range"
authors = ["rumblefrog <contact@rumblefrog.me>"]
repository = "https://github.com/rumblefrog/sp-dcp"
license = "MIT"
edition = "2018"

[features]
default = []

[dependencies]

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]
